--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "framer-motion": "^10.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
